--- a/.ci_support/linux_64_.yaml
+++ b/.ci_support/linux_64_.yaml
@@ -1,6 +1,8 @@
+cdt_name:
+- cos6
 channel_sources:
 - freecad/label/dev, conda-forge,defaults
 channel_targets:
 - freecad dev
 docker_image:
-- condaforge/linux-anvil-comp7
+- quay.io/condaforge/linux-anvil-cos7-x86_64
