--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -9,7 +9,7 @@ source:
   git_url: https://github.com/realthunder/FreeCAD_assembly3
   git_tag: master
   patches:
-    - asm3_py3_diff.patch
+    # - asm3_py3_diff.patch
 
 build:
   number: 0
