--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -9,10 +9,10 @@ source:
   git_url: https://github.com/realthunder/FreeCAD_assembly3
   git_tag: master
   patches:
-    # - asm3_py3_diff.patch
+    - patches/install.patch
 
 build:
-  number: 0
+  number: 1
   script: python -m pip install --no-deps --ignore-installed .
   noarch: python
 
